# evaluator

./: LICENSE  evaluator.cabal
src/: Main.hs
